docs: improvements for react native docs